; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/adns/src/extr_setup.c_ccf_search.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/adns/src/extr_setup.c_ccf_search.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i8** }

@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i8*, i32, i8*)* @ccf_search to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ccf_search(%struct.TYPE_5__* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8**, align 8
  %13 = alloca i8**, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %20, label %19

19:                                               ; preds = %4
  br label %85

20:                                               ; preds = %4
  %21 = load i8*, i8** %8, align 8
  store i8* %21, i8** %9, align 8
  store i32 0, i32* %14, align 4
  store i32 0, i32* %15, align 4
  br label %22

22:                                               ; preds = %25, %20
  %23 = call i64 @nextword(i8** %9, i8** %10, i32* %16)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %32

25:                                               ; preds = %22
  %26 = load i32, i32* %14, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %14, align 4
  %28 = load i32, i32* %16, align 4
  %29 = add nsw i32 %28, 1
  %30 = load i32, i32* %15, align 4
  %31 = add nsw i32 %30, %29
  store i32 %31, i32* %15, align 4
  br label %22

32:                                               ; preds = %22
  %33 = load i32, i32* %14, align 4
  %34 = sext i32 %33 to i64
  %35 = mul i64 8, %34
  %36 = trunc i64 %35 to i32
  %37 = call i8* @malloc(i32 %36)
  %38 = bitcast i8* %37 to i8**
  store i8** %38, i8*** %12, align 8
  %39 = load i8**, i8*** %12, align 8
  %40 = icmp ne i8** %39, null
  br i1 %40, label %45, label %41

41:                                               ; preds = %32
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %43 = load i32, i32* @errno, align 4
  %44 = call i32 @saveerr(%struct.TYPE_5__* %42, i32 %43)
  br label %85

45:                                               ; preds = %32
  %46 = load i32, i32* %15, align 4
  %47 = call i8* @malloc(i32 %46)
  store i8* %47, i8** %11, align 8
  %48 = load i8*, i8** %11, align 8
  %49 = icmp ne i8* %48, null
  br i1 %49, label %56, label %50

50:                                               ; preds = %45
  %51 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %52 = load i32, i32* @errno, align 4
  %53 = call i32 @saveerr(%struct.TYPE_5__* %51, i32 %52)
  %54 = load i8**, i8*** %12, align 8
  %55 = call i32 @free(i8** %54)
  br label %85

56:                                               ; preds = %45
  %57 = load i8*, i8** %8, align 8
  store i8* %57, i8** %9, align 8
  %58 = load i8**, i8*** %12, align 8
  store i8** %58, i8*** %13, align 8
  br label %59

59:                                               ; preds = %62, %56
  %60 = call i64 @nextword(i8** %9, i8** %10, i32* %16)
  %61 = icmp ne i64 %60, 0
  br i1 %61, label %62, label %76

62:                                               ; preds = %59
  %63 = load i8*, i8** %11, align 8
  %64 = load i8**, i8*** %13, align 8
  %65 = getelementptr inbounds i8*, i8** %64, i32 1
  store i8** %65, i8*** %13, align 8
  store i8* %63, i8** %64, align 8
  %66 = load i8*, i8** %11, align 8
  %67 = load i8*, i8** %10, align 8
  %68 = load i32, i32* %16, align 4
  %69 = call i32 @memcpy(i8* %66, i8* %67, i32 %68)
  %70 = load i32, i32* %16, align 4
  %71 = load i8*, i8** %11, align 8
  %72 = sext i32 %70 to i64
  %73 = getelementptr inbounds i8, i8* %71, i64 %72
  store i8* %73, i8** %11, align 8
  %74 = load i8*, i8** %11, align 8
  %75 = getelementptr inbounds i8, i8* %74, i32 1
  store i8* %75, i8** %11, align 8
  store i8 0, i8* %74, align 1
  br label %59

76:                                               ; preds = %59
  %77 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %78 = call i32 @freesearchlist(%struct.TYPE_5__* %77)
  %79 = load i32, i32* %14, align 4
  %80 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %81 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %80, i32 0, i32 0
  store i32 %79, i32* %81, align 8
  %82 = load i8**, i8*** %12, align 8
  %83 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %84 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %83, i32 0, i32 1
  store i8** %82, i8*** %84, align 8
  br label %85

85:                                               ; preds = %76, %50, %41, %19
  ret void
}

declare dso_local i64 @nextword(i8**, i8**, i32*) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @saveerr(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @free(i8**) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @freesearchlist(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
